complete partial scene

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -10,11 +10,12 @@
   <script type="text/javascript" src="lib/glMatrix.js"></script>
   <script type="text/javascript" src="src/init.js"></script>
   <script type="text/javascript" src="src/draw.js"></script>
+  <script type="text/javascript" src="src/figures.js"></script>
   <script type="text/javascript" src="src/app.js"></script>
 </head>
 
 <body onload="webGLStart()">
-  <canvas id="canvas" width="500" height="500"></canvas>
+  <canvas id="canvas" width="650" height="650" style="border: 1px solid black;"></canvas>
 </body>
 
 </html>
