add toggle buttons

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -16,6 +16,10 @@
 
 <body onload="webGLStart()">
   <canvas id="canvas" width="650" height="650" style="border: 1px solid black;"></canvas>
+  <br />
+  <button id="point" onclick="toggleType('point')">Point View</button>
+  <button id="line" onclick="toggleType('line')">Wireframe View</button>
+  <button id="fill" onclick="toggleType('fill')">Solid View</button>
 </body>
 
 </html>
