--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -17,6 +17,7 @@
 <body onload="webGLStart()">
   <canvas id="canvas" width="650" height="650" style="border: 1px solid black;"></canvas>
   <br />
+  <h3> Change Draw Mode</h3>
   <button id="point" onclick="toggleType('point')">Point View</button>
   <button id="line" onclick="toggleType('line')">Wireframe View</button>
   <button id="fill" onclick="toggleType('fill')">Solid View</button>
