--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -23,7 +23,9 @@
 </head>
 
 <body onload="webGLStart()">
-  <canvas id="canvas" width="650" height="650"></canvas>
+  <canvas id="canvas1" width="400" height="400"></canvas>
+  <canvas id="canvas2" width="400" height="400"></canvas>
+  <canvas id="canvas3" width="400" height="400"></canvas>
 </body>
 
 </html>
