--- a/TeapotGlobe/index.html
+++ b/TeapotGlobe/index.html
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="js/objects/skybox.js"></script>
   <script type="text/javascript" src="js/objects/sphere.js"></script>
   <script type="text/javascript" src="js/objects/teapot.js"></script>
+  <script type="text/javascript" src="js/objects/rubiks.js"></script>
 
 </head>
 
