--- a/TeapotGlobe/index.html
+++ b/TeapotGlobe/index.html
@@ -6,7 +6,7 @@
 
   <!-- All srcipts -->
   <script type="text/javascript" src="js/gl-matrix-min.js"></script>
-  <script type="text/javascript" src="js/webgl-utils.js"></script>
+  <script type="text/javascript" src="js/utils.js"></script>
   <script type="text/javascript" src="js/shaders.js"></script>
   <script type="text/javascript" src="js/startup.js"></script>
   <script type="text/javascript" src="js/view.js"></script>
@@ -35,7 +35,6 @@
     </p>
 
     <p><input type="checkbox" onclick="toggleReflection(this.checked);" checked>Reflection</input></p>
-    <p><input type="checkbox" onclick="toggleNormal(this.checked);" checked>Normal Mapping</input></p>
   </div>
 
   <!-- Interface Control -->
@@ -58,10 +57,6 @@
       environment_ambient = status ? ENV_AMBIENT_LIGHT_ON : ENV_AMBIENT_LIGHT_OFF;
     }
 
-    /** Enable/disable normal mapping. */
-    function toggleNormal(status) {
-      normalEnable = status ? 1.0 : 0.0;
-    }
 
   </script>
 
