--- a/ass3/index.html
+++ b/ass3/index.html
@@ -5,7 +5,7 @@
   <title>Assignment 4</title>
 
   <!-- All srcipts -->
-  <script type="text/javascript" src="gl-matrix-min.js"></script>
+  <script type="text/javascript" src="glMatrix.js"></script>
   <script type="text/javascript" src="utils.js"></script>
   <script type="text/javascript" src="index.js"></script>
 </head>
