add working assignment 4

--- a/ass3/index.html
+++ b/ass3/index.html
@@ -5,8 +5,8 @@
   <title>Assignment 4</title>
 
   <!-- All srcipts -->
-  <script type="text/javascript" src="glMatrix.js"></script>
-  <script type="text/javascript" src="utils.js"></script>
+  <script type="text/javascript" src="lib/glMatrix.js"></script>
+  <script type="text/javascript" src="lib/utils.js"></script>
   <script type="text/javascript" src="index.js"></script>
 </head>
 
