add font families

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -13,12 +13,13 @@
       justify-content: center;
       align-items: center;
       margin: 10px;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
     .container {
       border: 2px solid #000;
       padding: 10px;
-      background-color: #e3ffed;
+      background-color: #d1fdfa;
       border-radius: 5px;
     }
 
