--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -65,7 +65,8 @@
     <input type="radio" name="effects" id="Sharpen" onclick="setEffects('sharpen'); drawScene();"> Sharpen
     <input type="radio" name="effects" id="laplacian" onclick="setEffects('laplacian'); drawScene();"> Laplacian
     <hr />
-    <input type="button" value="Reset" onclick="setEffects(); document.getElementById('backgroundButton').click();">
+    <input type="button" value="Reset"
+      onclick="setEffects(); document.getElementById('contrast').value = 0.0; document.getElementById('brightness').value = 0.0; document.getElementById('backgroundButton').click();">
     <input type="button" value="Save Screenshot" onclick="downloadImage()">
 
   </div>
