--- a/ass5/index.html
+++ b/ass5/index.html
@@ -35,11 +35,8 @@
                 </div>
               </div>
             </div>
-            <a class="ui teal ribbon icon label" href="https://github.com/hoxxep/webgl-ray-tracing-demo"><i
-                class="github icon"></i> WebGL Ray Tracing Demo</a>
             <canvas class="render" id="render"></canvas>
           </div>
-          <p><strong>Note:</strong> I have no idea how this page looks in IE.</p>
         </div>
 
         <!-- controls column -->
@@ -68,7 +65,7 @@
           </div>
           <br>
           <div class="ui slider checkbox shadows setting" style="display: block;">
-            <input type="checkbox">
+            <input type="checkbox" id="shadows">
             <label><strong>Shadows</strong></label>
           </div>
 
@@ -85,13 +82,6 @@
           </button>
 
           <span><i class="clock icon"></i></span><span class="render-time"></span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="center aligned column">
-          <p class="copyright">
-            Copyright &copy; 2016 - Liam Gray
-          </p>
         </div>
       </div>
     </div>
