--- a/ass5/index.html
+++ b/ass5/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>WebGL Ray Tracer Demo - Liam Gray</title>
+  <title>Assignment 5</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
@@ -14,11 +14,6 @@
         <!-- canvas image -->
         <div class="sixteen wide mobile ten wide tablet ten wide computer column">
           <div id="screen" class="ui segment">
-            <div class="loading ui active inverted dimmer">
-              <div class="ui text loader">
-                Loading...
-              </div>
-            </div>
             <div class="loaded ui inverted dimmer">
               <div class="content">
                 <div class="center">
@@ -41,13 +36,8 @@
 
         <!-- controls column -->
         <div id="controls" class="six wide column">
-          <div class="profiling ui inverted dimmer">
-            <div class="ui text loader">
-              This does nothing yet...
-            </div>
-          </div>
 
-          <h2>WebGL Ray Tracing</h2>
+          <h2>Assignment 5</h2>
           <br>
           <div class="ui slider range">
             <strong>Spheres:</strong> <span class="value"></span>
@@ -68,20 +58,6 @@
             <input type="checkbox" id="shadows">
             <label><strong>Shadows</strong></label>
           </div>
-
-          <br>
-
-          <button class="profile ui labeled icon gray button">
-            <i class="area chart icon"></i>
-            Profile
-          </button>
-
-          <button class="render ui right labeled icon teal button">
-            Render
-            <i class="play icon"></i>
-          </button>
-
-          <span><i class="clock icon"></i></span><span class="render-time"></span>
         </div>
       </div>
     </div>
