change buttons to blue

--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -32,35 +32,27 @@
 
     .button-radio {
       display: inline-block;
-      background-color: #4CAF50;
-      /* Green background */
+      background-color: #29bef0;
       color: white;
-      /* White text */
       padding: 5px 10px;
-      /* Some padding */
       font-size: 16px;
-      /* Font size */
       border: none;
       cursor: pointer;
       border-radius: 4px;
-      /* Rounded corners */
       text-align: center;
       margin: 2px;
     }
 
     .button-radio input[type="radio"] {
       display: none;
-      /* Hide the default radio button */
     }
 
     .button-radio:hover {
-      background-color: #45a049;
-      /* Darker shade of green on hover */
+      background-color: #1f7a99;
     }
 
     .button-radio input[type="radio"]:checked+span {
-      background-color: #317d43;
-      /* Different background color when selected */
+      background-color: #03759c;
     }
   </style>
 </head>
